--- a/src/app/index.html
+++ b/src/app/index.html
@@ -17,8 +17,8 @@
                         <h1 id="weather-location" class="h3"></h1>
                         <h3 id="weather-description" class="h4"></h3>
                         <h3 id="weather-string"></h3>
-                        <ul class="list-group mt'3">
-                            <li id="weather-humidity" class="lit-group-item"></li>
+                        <ul class="list-group mt-3 " >
+                            <li id="weather-humidity" class="list-group-item"></li>
                             <li id="weather-wind" class="list-group-item"></li>
                         </ul>
                     </div>
